--- a/environment.yml
+++ b/environment.yml
@@ -3,16 +3,20 @@ channels:
 - conda-forge
 dependencies:
 - aeolus>=0.4.15
+- black
 - dask
+- flake8
 - ipykernel
 - ipython
 - iris>=3.2
+- isort
 - matplotlib
 - metpy
 - mo_pack
 - netCDF4
 - numpy
 - pandas
+- pre-commit
 - python>=3.10
 - pip
 - pytest
