--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,20 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1  # Use the ref you want to point at
+    rev: v4.4.0  # Use the ref you want to point at
     hooks:
     - id: check-json
     - id: check-yaml
     - id: fix-encoding-pragma
+      exclude: versioneer\.py|src/aeolus/_version\.py$
     - id: trailing-whitespace
-  - repo: https://github.com/humitos/mirrors-autoflake
-    rev: v1.1
-    hooks:
-    - id: autoflake
-      args: ['--in-place', '--remove-all-unused-imports', '--remove-unused-variable']
-  - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-        types: [file, python]
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.12.0
     hooks:
     - id: black
       language_version: python3
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 4.0.1
+      exclude: versioneer\.py|src/aeolus/_version\.py$
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
     hooks:
     - id: flake8
       language_version: python3
